source/styles/components/_advisor-tiles.scss
$advisor-tile-padding: ($line-height-computed * (2/3)) !default;

.advisor-tiles {
  @media (min-width: $screen-md-min) {
    margin-left: $grid-gutter-width;
    margin-right: $grid-gutter-width;
  }
}

.advisor-tile {
  background-color: #fff;
  border-color: $gray-lighter;
  border-style: solid;
  border-width: 1px 0;
  margin-top: -1px;
  position: relative;

  &:hover,
  &:focus {
    background-color: $orange-lighter;
    border-color: $tan;
    z-index: 2;
  }

  @media (min-width: $screen-md-min) {
    border-radius: $border-radius-large;
    border-width: 1px;
    margin-bottom: ($grid-gutter-width / 2);
    margin-top: ($grid-gutter-width / 2);
  }

  /**
   * TODO: This should be a utility class or a .btn modifier.
   */
  .btn-block {
    padding-left: 0.3em;
    padding-right: 0.3em;
  }
}

.advisor-tile-group {
  margin-bottom: 0;
  margin-top: 0;
  padding: 0 $advisor-tile-padding ($advisor-tile-padding / 1.5);

  &:first-child {
    padding-top: $advisor-tile-padding;
  }
  &:last-child {
    padding-bottom: $advisor-tile-padding;
  }
}

.advisor-tile-main {
  display: table;
  width: 100%;

  @media (min-width: $screen-md-min) {
    display: block;
  }
}

.advisor-tile-main-object,
.advisor-tile-main-body {
  display: table-cell;
  vertical-align: middle;

  @media (min-width: $screen-md-min) {
    display: block;
  }
}

.advisor-tile-main-object {
  padding-right: ($line-height-computed / 2);
  text-align: center;
  width: 1%;

  @media (min-width: $screen-md-min) {
    margin-bottom: ($line-height-computed / 2);
    padding-right: 0;
    width: 100%;
  }
}

.advisor-tile-main-body {
  > *:first-child {
    margin-top: 0;
    margin-bottom: 0.2em;
  }
  > *:last-child {
    margin-bottom: 0;
  }
  p {
    margin-bottom: 0.2em;
  }
}

.advisor-tile-photo {
  display: inline-block;
  position: relative;
  width: em(72px - ($line-height-computed / 2));

  @media (min-width: $screen-md-min) {
    max-width: 100%;
    width: auto;
  }

  img {
    display: block;
    max-width: 100%;
  }
}

.advisor-tile-staff-pick,
.advisor-tile-showcase {
  background-repeat: no-repeat;
  background-size: contain;
  position: absolute;

  @include text-hide();
}

.advisor-tile-staff-pick {
  background-image: url(/images/badges/staffpick.svg);
  height: 35px;
  left: -10px;
  top: -10px;
  width: 35px;

  @media (min-width: $screen-md-min) {
    left: -20px;
    height: 54px;
    width: 54px;
  }
}

.advisor-tile-showcase {
  background-image: url(/images/badges/showcase.svg);
  bottom: -6px;
  height: (52 / 117 * 64px);
  left: -7px;
  width: 64px;

  @media (min-width: $screen-md-min) {
    bottom: -4px;
    height: 52px;
    left: -20px;
    width: 117px;
  }
}

.advisor-tile-meta-group {
  display: inline-block;
  margin-right: ($line-height-computed / 3);
  vertical-align: middle;
  white-space: nowrap;

  &:last-child {
    margin-right: 0;
  }
  &.stars {
    height: 18px; // equals height of other paragraphs
  }
}

.advisor-tile-actions {
  width: calc(100% + #{$arrange-gutter-size});
  > .arrange-fill {
    width: 50%;
  }
}  

